# myLittleWebserv

./: .clang-format  .gitignore  CMakeLists.txt  FlowChart.drawio  Makefile  README.md  a  client  main.cpp  myLittleWebserv  temp  test.conf  test.cpp
CgiResponse/: CgiResponse.cpp  CgiResponse.hpp  cgiRunner.cpp  cgi_output
Config/: Config.cpp  Config.hpp  configTest.cpp  test.conf
ErrorPages/: 402.html  504.html
EventHandler/: Event.hpp  EventHandler.cpp  EventHandler.hpp
EventHandler/TestLog/: EventHandler.routeEvents.testlog
EventHandler/test/: CgiResponse.hpp  Config.hpp  HttpRequest.hpp  Makefile  Router.hpp
HttpRequest/: HttpRequest.cpp  HttpRequest.hpp  Storage.cpp  Storage.hpp
HttpResponse/: FileManager.cpp  FileManager.hpp  HttpResponse.cpp  HttpResponse.hpp
Log/: Log.cpp  Log.hpp  logTest.cpp
Router/: Router.cpp  Router.h  Router.hpp
VirtualServer/: VirtualServer.cpp  VirtualServer.hpp
client/: Client.cpp  HttpRequest.infile
client/CGI_TEST/: CgiRequest_0.infile
client/DELETE_TEST/: DeleteRequest_0.infile  DeleteRequest_1.infile
conf/: custom.conf  err_wrong_indent.conf  err_wrong_ip.conf  err_wrong_port.conf  eval.conf  only_server.conf  test.conf  test_custom.conf  tester.conf
error_pages/: 400.html  404.html  404_eval.html  405.html  409.html  413.html  500.html  501.html  502.html  503.html  505.html
eval/: index.html
server/: main.cpp
server/Log/: Log.cpp  (+2 more)
test/: Client.cpp  helloWorld.html  index.html
tools/: custom_test.sh  dialog_test.sh  leakcheck.sh  run_nginx.sh  sock_check.sh  socket_check.sh  test_custom.sh
(+86 files in other folders)
